# workwiseph

./: .gitattributes  .gitignore  CLAUDE.md  DESIGN.md  PHASES_V2.md  PRODUCT.md  Phases.md  README.md  pytest.ini  render.yaml  start.bat  stop.bat
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema_initial_schema.py  0002_add_category_add_category_column.py  0003_auth_logs_add_auth_users_and_logs_etl_run_logs.py
backend/app/: main.py
backend/app/core/: auth_deps.py  config.py  security.py
backend/app/db/: base.py  models.py  session.py
backend/app/repositories/: labor_repository.py
backend/app/routers/: admin.py  education.py  explore.py  forecast.py  kpis.py  labor.py  sectors.py  underemployment.py  workforce.py
backend/app/schemas/: responses.py
backend/app/services/: admin_service.py  education_service.py  explore_service.py  forecast_service.py  labor_service.py  sector_service.py  workforce_service.py
data_pipeline/: analytics_builder.py  clean.py  config.py  forecast_pipeline.py  forecasting.py  loader.py
datasets/: 1 Levels of Key Employment Indicators.xlsx  10 Number of Employed Persons by Major Industry Group.xlsx  11 Number of Employed Persons by Major Occupation Group.xlsx  12 Number of Employed Persons by Major Occupation Group (2012 PSOC Code) April 2016 to April 2026.xlsx  13 Number of Employed Persons by Class of Worker.xlsx  14 Number of Employed Persons by Highest Grade Completed (2017 PSCED) January 2023 to April 2026.xlsx  2 Rates Key Employment Indicators.xlsx  (+14 more)
(+102 files in other folders)
