[project]
name = "workwise-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg2-binary>=2.9",
  "pandas>=2.2",
  "openpyxl>=3.1",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "python-dotenv>=1.0",
  "slowapi>=0.1.9",
  "statsmodels>=0.14",
  "pyjwt>=2.8",
  "python-multipart>=0.0.9",
  "scikit-learn>=1.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.setuptools]
# Only the FastAPI app is an installable package; alembic/ is migration tooling,
# not a library. Explicit to avoid setuptools flat-layout auto-discovery errors.
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
